Update metadata in older posts

--- a/content/posts/2013-08-04-.md
+++ b/content/posts/2013-08-04-.md
@@ -2,7 +2,7 @@
 title: '5 months as an independent engineer: tools of the trade.'
 author: cpbotha
 type: post
-date: -001-11-30T00:00:00+00:00
+date: 2013-08-04
 draft: true
 url: /?p=1767
 categories:
