--- a/content/posts/2014-06-16-.md
+++ b/content/posts/2014-06-16-.md
@@ -2,7 +2,7 @@
 title: The Lavabit shutdown message
 author: cpbotha
 type: post
-date: -001-11-30T00:00:00+00:00
+date: 2014-06-16
 draft: true
 url: /?p=1781
 categories:
@@ -24,27 +24,27 @@ In 2013, the secure email service Lavabit voluntarily shutdown when they were pr
 &gt;   <p>
 &gt;     TESTING REVISIONS!
 &gt;   </p>
-&gt;   
+&gt;
 &gt;   <p>
 &gt;     My Fellow Users,
 &gt;   </p>
-&gt;   
+&gt;
 &gt;   <p>
 &gt;     I have been forced to make a difficult decision: to become complicit in crimes against the American people or walk away from nearly ten years of hard work by shutting down Lavabit. After significant soul searching, I have decided to suspend operations. I wish that I could legally share with you the events that led to my decision. I cannot. I feel you deserve to know what’s going on–the first amendment is supposed to guarantee me the freedom to speak out in situations like this. Unfortunately, Congress has passed laws that say otherwise. As things currently stand, I cannot share my experiences over the last six weeks, even though I have twice made the appropriate requests.
 &gt;   </p>
-&gt;   
+&gt;
 &gt;   <p>
 &gt;     What’s going to happen now? We’ve already started preparing the paperwork needed to continue to fight for the Constitution in the Fourth Circuit Court of Appeals. A favorable decision would allow me resurrect Lavabit as an American company.
 &gt;   </p>
-&gt;   
+&gt;
 &gt;   <p>
 &gt;     This experience has taught me one very important lesson: without congressional action or a strong judicial precedent, I would _strongly_ recommend against anyone trusting their private data to a company with physical ties to the United States.
 &gt;   </p>
-&gt;   
+&gt;
 &gt;   <p>
 &gt;     Sincerely,<br/> Ladar Levison<br/> Owner and Operator, Lavabit LLC
 &gt;   </p>
-&gt;   
+&gt;
 &gt;   <p>
 &gt;     Defending the constitution is expensive! Help us by donating to the Lavabit Legal Defense Fund <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=7BCR4A5W9PNN4">here</a>.
 &gt;   </p>
