--- a/content/posts/2016-11-20-.md
+++ b/content/posts/2016-11-20-.md
@@ -2,7 +2,7 @@
 title: Since Trump’s election, secure messaging app Signal has experienced four times its usual growth
 author: cpbotha
 type: post
-date: -001-11-30T00:00:00+00:00
+date: 2016-11-20
 draft: true
 url: /?p=2569
 categories:
@@ -11,4 +11,4 @@ categories:
 ---
 There are other apps with end-to-end encryption. A number of them were even helped by Moxie Marlinspike, the genius behind Signal App, but Signal App itself is still the best.
 
-http://www.marketplace.org/2016/11/15/world/encryption-app-signal-sees-400-growth-election
+<http://www.marketplace.org/2016/11/15/world/encryption-app-signal-sees-400-growth-election>
