--- a/content/posts/2017-05-07-.md
+++ b/content/posts/2017-05-07-.md
@@ -2,7 +2,7 @@
 title: Our AfrikaBurn 2017 – BURNIVERSITY!
 author: cpbotha
 type: post
-date: -001-11-30T00:00:00+00:00
+date: 2017-05-07
 draft: true
 url: /?p=2887
 categories:
