--- a/content/posts/2011-01-16-.md
+++ b/content/posts/2011-01-16-.md
@@ -2,7 +2,7 @@
 title: An in-depth and nerdy review of the HTC Desire Z
 author: cpbotha
 type: post
-date: -001-11-30T00:00:00+00:00
+date: 2011-01-16
 draft: true
 url: /?p=1169
 categories:
