Move 2006,7,8 posts to subdirs

--- a/content/posts/2007/2007-07-31-.md
+++ b/content/posts/2007/2007-07-31-.md
@@ -2,7 +2,7 @@
 title: The Simpsons and Theoretical Physics
 author: cpbotha
 type: post
-date: -001-11-30T00:00:00+00:00
+date: 2024-07-31
 draft: true
 url: /?p=320
 categories:
@@ -11,6 +11,6 @@ categories:
 ---
 A sure sign that our civilization is on the large progressing in exactly the right direction, is the influence
 
-http://blog.sciam.com/index.php?title=how_a_fake_word_from_the_simpson_s_ended&more=1&c=1&tb=1&pb=1&ref=rss
+<http://blog.sciam.com/index.php?title=how_a_fake_word_from_the_simpson_s_ended&more=1&c=1&tb=1&pb=1&ref=rss>
 
-http://en.wikipedia.org/wiki/Culturally_significant_phrases_from_The_Simpsons
+<http://en.wikipedia.org/wiki/Culturally_significant_phrases_from_The_Simpsons>
